2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/php.lang: added 'identifier'
	context, bug #497376.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	Bug 317861 – sourceview is ignoring tab settings which are set before
	it is mapped or realized.

	* gtksourceview/gtksourceview.c:
	GtkSourceViewPrivate::tabs_set - new field, which gets set in
	set_tab_stops_internal() when gtk_text_view_set_tabs() is called;
	(gtk_source_view_style_set): do not call set_tab_stops_internal()
	if tabs were not modified.

	This way gtk_text_view_set_tabs() is called only when
	gtk_source_view_set_tab_width() is called with something other than 8,
	and so GtkSourceView users (like meld in the bug above) may use
	gtk_text_view_set_tabs() themselves.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	Bug 329883 – evaluate bracket matching as soon as it's turned on.
	* gtksourceview/gtksourcebuffer.c
	(gtk_source_buffer_set_highlight_matching_brackets):
	update matching bracket immediately.
	* tests/test-widget.c: added a menu item for highlighting matching
	brackets.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	* tests/apple-red.png:
	* tests/gnome-gmush.png:
	* tests/test-widget.c:
	* tests/Makefile.am:
	Added apple and mushroom icons, so that line marks in test-widget
	finally show up without gnome.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/def.lang: do not allow backslash
	in net-address. Fixes bug #541791.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	Bug 545096 – highlighting problems for DTD entities inside xml.

	* gtksourceview/language-specs/dtd.lang: do not highlight any
	unknown text as error.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	Bug 543313 – Self closed <script> tags are not accounted correctly
	in html.

	* gtksourceview/language-specs/html.lang: committed fix by pbor.

2008-08-02  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c (analyze_line):